# dbnotebook-v2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FOR_BHARATH.md  IMPLEMENTATION_STATUS.md  Java Fundamentals.md  README.md  alembic.ini  dev.sh  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  mkdocs.yml  prod.sh  pyproject.toml  requirements-docker.txt  requirements.txt  setup_postgres.py  start.sh  test_chromavector.py  test_filtering.py  test_metadata.py
.claude/: settings.local.json
alembic/: env.py
config/: dbnotebook.yaml  ingestion.yaml  models.yaml  raptor.yaml  sql_chat.yaml
dbnotebook/: __init__.py  __main__.py  pipeline.py  rag_chatbpt.srctrldb  wsgi.py
deploy/: .env.example  README.md  docker-compose.yml
docs/: ANALYTICS_API.md  ANALYTICS_COMPONENTS.md  ANALYTICS_DATA_FLOW.md  ANALYTICS_FEATURE.md  ARCHITECTURE.md  CHROMADB_ADD_DELETE_IMPLEMENTATION.md  CHROMADB_FIX.md  CHROMADB_VECTORSTORE_FIX.md  CONSOLIDATED_FEATURES.md  CONVERSATION_ARCHITECTURE.md  CONVERSATION_FIX_SUMMARY.md  DATABASE_URL_FIX.md  HYBRID_ARCHITECTURE.md  LANGSMITH_INTEGRATION.md  MIGRATION_SUMMARY.md  MULTI_USER_ARCHITECTURE_PLAN.md  MVP5_MVP6_PLAN.md  NOTEBOOKS_UI_IMPROVEMENTS.md  NOTEBOOK_ARCHITECTURE_FIX.md  NOTEBOOK_FLOW_VERIFICATION.md  NOTEBOOK_UPLOAD_STATUS.md  OFFERING_TO_NOTEBOOK_MIGRATION.md  PGVECTOR_MIGRATION_PLAN.md  PHASE_5_6_PROGRESS.md  POSTGRESQL_PGVECTOR_SETUP.md  PROJECT_STATUS.md  QUERY_LOGGING_IMPLEMENTATION.md  REQUIREMENTS.md  SESSION_SUMMARY.md  SESSION_SUMMARY_HYBRID.md  USER_RBAC_GUIDE.md  UX_ANALYSIS.md  UX_IMPLEMENTATION_PLAN.md  changelog.md  configuration.md  index.md  query-flows-architecture.md  troubleshooting.md
frontend/: AGENTIC_COMPONENTS.md  index.html  package-lock.json  package.json  vite.config.ts
plan/: document-extraction-architecture.md
prototype/: dbnotebook-prototype.html
rag_chatbot/: __main__.py  pipeline.py  rag_chatbpt.srctrlprj
scripts/: download_reranker_models.py  install.sh  load_test_query_api.py  query_api_example.py  rebuild_raptor.py  reembed_documents.py  run.sh
static/: manifest.json
tests/: benchmark_config_matrix.py  load_test_models.py  load_test_query_api.py  simple_load_test.py  test_accuracy_benchmark.py  test_conversation_integration.py  test_load_concurrent.py  test_notebook_integration.py
(+398 files in other folders)
